[package]
name = "kontroli"
version = "0.1.0"
authors = ["Michael Färber <michael.faerber@gedenkt.at>"]
edition = "2018"

[dependencies]
bytecount = "0.6"
byte-unit = "3.0"
crossbeam-channel = "0.4.2"
nom = "5.0"
circular = "0.3"
fnv = "1.0.3"
lazy-st = { git = "https://github.com/01mf02/lazy-st", rev = "cb357e1" }
pretty_env_logger = "0.4"
structopt = "0.3"
log = "0.4.8"

[profile.dev]
opt-level = 3
