[package]
name = "kontroli"
version = "0.1.0"
authors = ["Michael Färber <michael.faerber@gedenkt.at>"]
edition = "2018"
license = "GPL-3.0-only"
readme = "README.md"
keywords = ["logic", "dependent-types", "typechecker", "dedukti"]
categories = ["concurrency", "no-std", "parser-implementations", "science"]

[workspace]
members = [
    "kocheck",
]

[dependencies]
fnv = "1.0.3"
im = "14.3"
lazy-st = "0.2"
log = "0.4.8"
nested-modules = "0.1"
nom = "5.0"

[profile.release]
codegen-units = 1

[lib]
bench = false

[dev-dependencies]
colosseum = "0.2"
criterion = "0.3"

[[bench]]
name = "bench"
harness = false
