[package]
name = "dedukti-parse"
version = "0.2.0"
authors = ["Michael Färber <michael.faerber@gedenkt.at>"]
edition = "2018"
description = "Parser for the Dedukti file format"
repository = "https://github.com/01mf02/kontroli-rs"
license = "GPL-3.0-only"
keywords = ["dependent-types", "rewriting", "dedukti"]
categories = ["no-std", "parser-implementations"]

[features]
default = ["itertools"]

[dependencies]
logos = "0.12"
itertools = { version = "0.10", optional = true }
