[package]
name = "dedukti-parse"
version = "0.3.1"
authors = ["Michael Färber <michael.faerber@gedenkt.at>"]
edition = "2021"
description = "Parser for the Dedukti file format"
repository = "https://github.com/01mf02/kontroli-rs"
license = "GPL-3.0-only"
keywords = ["dependent-types", "rewriting", "dedukti"]
categories = ["no-std", "parser-implementations"]

[dependencies]
logos = "0.12"

[dev-dependencies]
clap = { version = "3.1.18", features = ["derive"] }
env_logger = "0.9.0"
log = "0.4.17"
