[package]
name = "kocheck"
version = "0.3.0"
authors = ["Michael Färber <michael.faerber@gedenkt.at>"]
edition = "2021"
description = "Type checker for the lambda-Pi calculus modulo rewriting"
readme = "../README.md"
repository = "https://github.com/01mf02/kontroli-rs"
license = "GPL-3.0-only"
keywords = ["verification", "dependent-types", "type-checking", "rewriting", "dedukti"]
categories = ["command-line-utilities", "science"]
rust-version = "1.56"

[dependencies]
clap = { version = "3.0", features = ["derive"] }
colosseum = "0.2"
flume = { version = "0.8", default-features = false }
mimalloc = { version = "0.1.29", default-features = false }
kontroli = { version = "0.3", path = "../kontroli" }
log = "0.4"
env_logger = "0.7"
rayon = "1.3"
