[package]
name = "kofmt"
version = "0.3.1"
authors = ["Michael Färber <michael.faerber@gedenkt.at>"]
edition = "2021"
description = "Pretty printer for Dedukti"
repository = "https://github.com/01mf02/kontroli-rs"
license = "GPL-3.0-only"
keywords = ["dependent-types", "rewriting", "dedukti"]
categories = ["command-line-utilities"]

[features]
default = ["mimalloc"]

[dependencies]
clap = { version = "4.0.0", features = ["derive"] }
dedukti-parse = { version = "0.3.1", path = "../dedukti-parse" }
env_logger = "0.9.0"
mimalloc = { version = "0.1.39", default-features = false, optional = true }
log = "0.4.17"
logos = "0.12"
