[package]
name = "koweb"
description = "Web interface for Kontroli"
version = "0.1.0"
authors = ["Michael Färber <michael.faerber@gedenkt.at>", "Joshua Caumont <joshua.caumont@gmail.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dedukti-parse = { path = "../dedukti-parse" }
kontroli = { path = "../kontroli" }
kocheck = { path = "../kocheck", default-features = false }

console_error_panic_hook = "0.1.7"
console_log = { version = "0.2", features = ["color"] }
error-chain = "0.12.4"
getrandom = { version = "0.2.3", features = ["js"] }
log = "0.4.6"
reqwest = {version = "0.11.3", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.23"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]
