[package]
name = "koweb"
description = "Web interface for Kontroli"
version = "0.1.0"
authors = ["Michael Färber <michael.faerber@gedenkt.at>", "Joshua Caumont <joshua.caumont@gmail.com>"]
categories = ["wasm"]
readme = "README.md"
repository = "https://github.com/01mf02/kontroli-rs"
license = "GPL-3.0-only"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dedukti-parse = { path = "../dedukti-parse" }
kontroli = { path = "../kontroli" }
kocheck = { path = "../kocheck", default-features = false }

console_error_panic_hook = "0.1.7"
console_log = { version = "1.0", features = ["color"] }
error-chain = { version = "0.12.4", default-features = false }
getrandom = { version = "0.2.3", features = ["js"] }
log = "0.4.6"
ureq = "2.9"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.23"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]
